@@ -14,6 +14,7 @@ Documentation:
 Build:
 - Fix missing function warnings on NetBSD.
 - Fix WITH_STATIC_LIBRARIES using CMake on Windows. Closes #1369.
+- Guard ssize_t definition on Windows. Closes #522.
 
 
 1.6.4 - 20190801
